[IRGen] fix crash in metatype fulfillment search

This patch fix SR-10128